feat: simplify config by fetching it on app setup
