# internal/subscriber/querier/openapi.yml
@@ -604,6 +604,343 @@ paths:
           format: uint64
       tags:
         - Query
+  '/ibc/core/connection/v1/connections/{connection_id}':
+    get:
+      summary: Connection queries an IBC connection end.
+      operationId: IbcCoreConnectionV1Connection
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              connection:
+                title: connection associated with the request identifier
+                type: object
+                properties:
+                  client_id:
+                    type: string
+                    description: client associated with this connection.
+                  versions:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        identifier:
+                          type: string
+                          title: unique version identifier
+                        features:
+                          type: array
+                          items:
+                            type: string
+                          title: >-
+                            list of features compatible with the specified
+                            identifier
+                      description: >-
+                        Version defines the versioning scheme used to negotiate
+                        the IBC verison in
+
+                        the connection handshake.
+                    description: >-
+                      IBC version which can be utilised to determine encodings
+                      or protocols for
+
+                      channels or packets utilising this connection.
+                  state:
+                    description: current state of the connection end.
+                    type: string
+                    enum:
+                      - STATE_UNINITIALIZED_UNSPECIFIED
+                      - STATE_INIT
+                      - STATE_TRYOPEN
+                      - STATE_OPEN
+                    default: STATE_UNINITIALIZED_UNSPECIFIED
+                  counterparty:
+                    description: counterparty chain associated with this connection.
+                    type: object
+                    properties:
+                      client_id:
+                        type: string
+                        description: >-
+                          identifies the client on the counterparty chain
+                          associated with a given
+
+                          connection.
+                      connection_id:
+                        type: string
+                        description: >-
+                          identifies the connection end on the counterparty
+                          chain associated with a
+
+                          given connection.
+                      prefix:
+                        description: commitment merkle prefix of the counterparty chain.
+                        type: object
+                        properties:
+                          key_prefix:
+                            type: string
+                            format: byte
+                        title: >-
+                          MerklePrefix is merkle path prefixed to the key.
+
+                          The constructed key from the Path and the key will be
+                          append(Path.KeyPath,
+
+                          append(Path.KeyPrefix, key...))
+                  delay_period:
+                    type: string
+                    format: uint64
+                    description: >-
+                      delay period that must pass before a consensus state can
+                      be used for
+
+                      packet-verification NOTE: delay period logic is only
+                      implemented by some
+
+                      clients.
+                description: >-
+                  ConnectionEnd defines a stateful object on a chain connected
+                  to another
+
+                  separate one.
+
+                  NOTE: there must only be 2 defined ConnectionEnds to establish
+
+                  a connection between two chains.
+              proof:
+                type: string
+                format: byte
+                title: merkle proof of existence
+              proof_height:
+                title: height at which the proof was retrieved
+                type: object
+                properties:
+                  revision_number:
+                    type: string
+                    format: uint64
+                    title: the revision that the client is currently on
+                  revision_height:
+                    type: string
+                    format: uint64
+                    title: the height within the given revision
+                description: >-
+                  Normally the RevisionHeight is incremented at each height
+                  while keeping
+
+                  RevisionNumber the same. However some consensus algorithms may
+                  choose to
+
+                  reset the height in certain conditions e.g. hard forks,
+                  state-machine
+
+                  breaking changes In these cases, the RevisionNumber is
+                  incremented so that
+
+                  height continues to be monitonically increasing even as the
+                  RevisionHeight
+
+                  gets reset
+            description: >-
+              QueryConnectionResponse is the response type for the
+              Query/Connection RPC
+
+              method. Besides the connection end, it includes a proof and the
+              height from
+
+              which the proof was retrieved.
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                      description: >-
+                        A URL/resource name that uniquely identifies the type of
+                        the serialized
+
+                        protocol buffer message. This string must contain at
+                        least
+
+                        one "/" character. The last segment of the URL's path
+                        must represent
+
+                        the fully qualified name of the type (as in
+
+                        `path/google.protobuf.Duration`). The name should be in
+                        a canonical form
+
+                        (e.g., leading "." is not accepted).
+
+
+                        In practice, teams usually precompile into the binary
+                        all types that they
+
+                        expect it to use in the context of Any. However, for
+                        URLs which use the
+
+                        scheme `http`, `https`, or no scheme, one can optionally
+                        set up a type
+
+                        server that maps type URLs to message definitions as
+                        follows:
+
+
+                        * If no scheme is provided, `https` is assumed.
+
+                        * An HTTP GET on the URL must yield a
+                        [google.protobuf.Type][]
+                          value in binary format, or produce an error.
+                        * Applications are allowed to cache lookup results based
+                        on the
+                          URL, or have them precompiled into a binary to avoid any
+                          lookup. Therefore, binary compatibility needs to be preserved
+                          on changes to types. (Use versioned type names to manage
+                          breaking changes.)
+
+                        Note: this functionality is not currently available in
+                        the official
+
+                        protobuf release, and it is not used for type URLs
+                        beginning with
+
+                        type.googleapis.com.
+
+
+                        Schemes other than `http`, `https` (or the empty scheme)
+                        might be
+
+                        used with implementation specific semantics.
+                  additionalProperties: { }
+                  description: >-
+                    `Any` contains an arbitrary serialized protocol buffer
+                    message along with a
+
+                    URL that describes the type of the serialized message.
+
+
+                    Protobuf library provides support to pack/unpack Any values
+                    in the form
+
+                    of utility functions or additional generated methods of the
+                    Any type.
+
+
+                    Example 1: Pack and unpack a message in C++.
+
+                        Foo foo = ...;
+                        Any any;
+                        any.PackFrom(foo);
+                        ...
+                        if (any.UnpackTo(&foo)) {
+                          ...
+                        }
+
+                    Example 2: Pack and unpack a message in Java.
+
+                        Foo foo = ...;
+                        Any any = Any.pack(foo);
+                        ...
+                        if (any.is(Foo.class)) {
+                          foo = any.unpack(Foo.class);
+                        }
+
+                     Example 3: Pack and unpack a message in Python.
+
+                        foo = Foo(...)
+                        any = Any()
+                        any.Pack(foo)
+                        ...
+                        if any.Is(Foo.DESCRIPTOR):
+                          any.Unpack(foo)
+                          ...
+
+                     Example 4: Pack and unpack a message in Go
+
+                         foo := &pb.Foo{...}
+                         any, err := anypb.New(foo)
+                         if err != nil {
+                           ...
+                         }
+                         ...
+                         foo := &pb.Foo{}
+                         if err := any.UnmarshalTo(foo); err != nil {
+                           ...
+                         }
+
+                    The pack methods provided by protobuf library will by
+                    default use
+
+                    'type.googleapis.com/full.type.name' as the type URL and the
+                    unpack
+
+                    methods only use the fully qualified type name after the
+                    last '/'
+
+                    in the type URL, for example "foo.bar.com/x/y.z" will yield
+                    type
+
+                    name "y.z".
+
+
+
+                    JSON
+
+                    ====
+
+                    The JSON representation of an `Any` value uses the regular
+
+                    representation of the deserialized, embedded message, with
+                    an
+
+                    additional field `@type` which contains the type URL.
+                    Example:
+
+                        package google.profile;
+                        message Person {
+                          string first_name = 1;
+                          string last_name = 2;
+                        }
+
+                        {
+                          "@type": "type.googleapis.com/google.profile.Person",
+                          "firstName": <string>,
+                          "lastName": <string>
+                        }
+
+                    If the embedded message type is well-known and has a custom
+                    JSON
+
+                    representation, that representation will be embedded adding
+                    a field
+
+                    `value` which holds the custom JSON in addition to the
+                    `@type`
+
+                    field. Example (for message [google.protobuf.Duration][]):
+
+                        {
+                          "@type": "type.googleapis.com/google.protobuf.Duration",
+                          "value": "1.212s"
+                        }
+      parameters:
+        - name: connection_id
+          description: connection unique identifier
+          in: path
+          required: true
+          type: string
+      tags:
+        - Query
 definitions:
   neutron.interchainadapter.interchainqueries.Block:
     type: object
